syntax = "proto3";

package user;

option go_package = "go-app/pkg/user";

message Person {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  int32 age = 6;
  string phone_number = 7;
  string address = 8;
  string city = 9;
  string country = 10;
  string postal_code = 11;
  int64 created_at = 12;
  int64 last_login_at = 13;
  bool is_active = 14;
  string profile_picture = 15;
  string occupation = 16;
  string company = 17;
}
